page-shell-mobile__lang-icon-currency & _pgfqnw -> font-semibold

--- a/account-settings.html
+++ b/account-settings.html
@@ -888,7 +888,7 @@
                                             <span class="text-highlight dir dir-ltr"
                                               >Choose a currency</span
                                             ><span class="page-shell-mobile__lang-icon-wrapper"
-                                              ><span class="page-shell-mobile__lang-icon-currency"
+                                              ><span class="font-semibold"
                                                 >₱</span
                                               ></span
                                             ><span class="page-shell-mobile__lang-text">PHP</span>
@@ -1134,7 +1134,7 @@
                                   </div>
                                 </h1>
                                 <div class="account-container__header-desc">
-                                  <span class="page-shell-mobile__lang-icon-currency"
+                                  <span class="font-semibold"
                                     >Jose Angelo Ramirez<!-- -->, </span
                                   ><span
                                     >ramirezjoseangelo@gmail.com<!-- -->
@@ -1695,7 +1695,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
@@ -1761,7 +1761,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
@@ -1942,7 +1942,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
