--- a/covidsafety.html
+++ b/covidsafety.html
@@ -2192,7 +2192,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="page-shell-mobile__lang-icon-wrapper"
-                                    ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                    ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
                               >
@@ -2255,7 +2255,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="page-shell-mobile__lang-icon-wrapper"
-                                    ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                    ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
                               >
@@ -2425,7 +2425,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="page-shell-mobile__lang-icon-wrapper"
-                                    ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                    ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
                               >
