--- a/experiences.html
+++ b/experiences.html
@@ -349,7 +349,7 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="page-shell-mobile__lang-icon-currency">
+                                          <div class="font-semibold">
                                             Add availability
                                           </div>
                                           <div class="main-content__agenda-desc">
@@ -467,7 +467,7 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="page-shell-mobile__lang-icon-currency">
+                                          <div class="font-semibold">
                                             Finish submitting your experience
                                           </div>
                                           <div class="main-content__agenda-desc">
@@ -575,7 +575,7 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="page-shell-mobile__lang-icon-currency">
+                                          <div class="font-semibold">
                                             Finish submitting your experience
                                           </div>
                                           <div class="main-content__agenda-desc">
@@ -679,7 +679,7 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="page-shell-mobile__lang-icon-currency">
+                                          <div class="font-semibold">
                                             Finish submitting your experience
                                           </div>
                                           <div class="main-content__agenda-desc">
@@ -783,7 +783,7 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="page-shell-mobile__lang-icon-currency">
+                                          <div class="font-semibold">
                                             Finish submitting your experience
                                           </div>
                                           <div class="main-content__agenda-desc">
@@ -998,7 +998,7 @@
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="page-shell-mobile__lang-icon-wrapper"
-                                  ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                  ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
                             >
@@ -1059,7 +1059,7 @@
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="page-shell-mobile__lang-icon-wrapper"
-                                  ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                  ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
                             >
@@ -1229,7 +1229,7 @@
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="page-shell-mobile__lang-icon-wrapper"
-                                  ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                  ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
                             >
