--- a/gift.html
+++ b/gift.html
@@ -927,7 +927,7 @@
                                     <span class="text-highlight dir dir-ltr"
                                       >Choose a currency</span
                                     ><span class="page-shell-mobile__lang-icon-wrapper"
-                                      ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                      ><span class="font-semibold">₱</span></span
                                     ><span class="page-shell-mobile__lang-text">PHP</span>
                                   </button></span
                                 >
@@ -991,7 +991,7 @@
                                     <span class="text-highlight dir dir-ltr"
                                       >Choose a currency</span
                                     ><span class="page-shell-mobile__lang-icon-wrapper"
-                                      ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                      ><span class="font-semibold">₱</span></span
                                     ><span class="page-shell-mobile__lang-text">PHP</span>
                                   </button></span
                                 >
@@ -1162,7 +1162,7 @@
                                     <span class="text-highlight dir dir-ltr"
                                       >Choose a currency</span
                                     ><span class="page-shell-mobile__lang-icon-wrapper"
-                                      ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                      ><span class="font-semibold">₱</span></span
                                     ><span class="page-shell-mobile__lang-text">PHP</span>
                                   </button></span
                                 >
