--- a/invite-friends.html
+++ b/invite-friends.html
@@ -462,7 +462,7 @@
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="page-shell-mobile__lang-icon-wrapper"
-                                  ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                  ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
                             >
@@ -523,7 +523,7 @@
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="page-shell-mobile__lang-icon-wrapper"
-                                  ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                  ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
                             >
@@ -690,7 +690,7 @@
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="page-shell-mobile__lang-icon-wrapper"
-                                  ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                  ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
                             >
