--- a/merchandising.html
+++ b/merchandising.html
@@ -12934,7 +12934,7 @@
                                                             ><span
                                                               class="page-shell-mobile__lang-icon-wrapper"
                                                               ><span
-                                                                class="page-shell-mobile__lang-icon-currency"
+                                                                class="font-semibold"
                                                                 >₱</span
                                                               ></span
                                                             ><span
@@ -13036,7 +13036,7 @@
                                                             ><span
                                                               class="page-shell-mobile__lang-icon-wrapper"
                                                               ><span
-                                                                class="page-shell-mobile__lang-icon-currency"
+                                                                class="font-semibold"
                                                                 >₱</span
                                                               ></span
                                                             ><span
@@ -13261,7 +13261,7 @@
                                                             ><span
                                                               class="page-shell-mobile__lang-icon-wrapper"
                                                               ><span
-                                                                class="page-shell-mobile__lang-icon-currency"
+                                                                class="font-semibold"
                                                                 >₱</span
                                                               ></span
                                                             ><span
