--- a/payment.html
+++ b/payment.html
@@ -300,7 +300,7 @@
                                                 <div>
                                                   <div class="_b7b6bk">
                                                     <div class="_1qyi2pa">
-                                                      <div class="page-shell-mobile__lang-icon-currency">
+                                                      <div class="font-semibold">
                                                         <h3
                                                           tabindex="-1"
                                                           class="heading"
@@ -345,7 +345,7 @@
                                                 <div>
                                                   <div class="_b7b6bk">
                                                     <div class="_1qyi2pa">
-                                                      <div class="page-shell-mobile__lang-icon-currency">
+                                                      <div class="font-semibold">
                                                         <h3
                                                           tabindex="-1"
                                                           class="heading"
@@ -858,7 +858,7 @@
                                               >
                                                 <div class="main-content__details-cancel-button-wrapper">
                                                   <div class="_ymq6as">
-                                                    <div class="page-shell-mobile__lang-icon-currency">
+                                                    <div class="font-semibold">
                                                       Cancellation policy
                                                     </div>
                                                   </div>
@@ -1421,7 +1421,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span class="page-shell-mobile__lang-icon-wrapper"
-                                                  ><span class="page-shell-mobile__lang-icon-currency"
+                                                  ><span class="font-semibold"
                                                     >₱</span
                                                   ></span
                                                 ><span class="page-shell-mobile__lang-text"
@@ -1513,7 +1513,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span class="page-shell-mobile__lang-icon-wrapper"
-                                                  ><span class="page-shell-mobile__lang-icon-currency"
+                                                  ><span class="font-semibold"
                                                     >₱</span
                                                   ></span
                                                 ><span class="page-shell-mobile__lang-text"
@@ -1729,7 +1729,7 @@
                                                   class="text-highlight dir dir-ltr"
                                                   >Choose a currency</span
                                                 ><span class="page-shell-mobile__lang-icon-wrapper"
-                                                  ><span class="page-shell-mobile__lang-icon-currency"
+                                                  ><span class="font-semibold"
                                                     >₱</span
                                                   ></span
                                                 ><span class="page-shell-mobile__lang-text"
