--- a/products.html
+++ b/products.html
@@ -7402,7 +7402,7 @@
                                                 ><span
                                                   class="page-shell-mobile__lang-icon-wrapper"
                                                   ><span
-                                                    class="page-shell-mobile__lang-icon-currency"
+                                                    class="font-semibold"
                                                     >₱</span
                                                   ></span
                                                 ><span
@@ -7505,7 +7505,7 @@
                                                 ><span
                                                   class="page-shell-mobile__lang-icon-wrapper"
                                                   ><span
-                                                    class="page-shell-mobile__lang-icon-currency"
+                                                    class="font-semibold"
                                                     >₱</span
                                                   ></span
                                                 ><span
@@ -7731,7 +7731,7 @@
                                                 ><span
                                                   class="page-shell-mobile__lang-icon-wrapper"
                                                   ><span
-                                                    class="page-shell-mobile__lang-icon-currency"
+                                                    class="font-semibold"
                                                     >₱</span
                                                   ></span
                                                 ><span
@@ -21045,7 +21045,7 @@
                                               ><span
                                                 class="page-shell-mobile__lang-icon-wrapper"
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-currency"
+                                                  class="font-semibold"
                                                   >₱</span
                                                 ></span
                                               ><span
@@ -21147,7 +21147,7 @@
                                               ><span
                                                 class="page-shell-mobile__lang-icon-wrapper"
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-currency"
+                                                  class="font-semibold"
                                                   >₱</span
                                                 ></span
                                               ><span
@@ -21370,7 +21370,7 @@
                                               ><span
                                                 class="page-shell-mobile__lang-icon-wrapper"
                                                 ><span
-                                                  class="page-shell-mobile__lang-icon-currency"
+                                                  class="font-semibold"
                                                   >₱</span
                                                 ></span
                                               ><span
