--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -1111,7 +1111,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
@@ -1177,7 +1177,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
@@ -1358,7 +1358,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
