--- a/signup_login.html
+++ b/signup_login.html
@@ -2094,7 +2094,7 @@
                                             </div>
                                             <div class="flex-items-center">
                                               <div>
-                                                <div id="sms-row-title" class="_gw4xx4"><span class="_pgfqnw">Text
+                                                <div id="sms-row-title" class="_gw4xx4"><span class="font-semibold">Text
                                                     message (SMS)</span></div>
                                                 <div id="sms-row-subtitle" class="_hi9sy">We'll text you a code.</div>
                                               </div>
@@ -2129,7 +2129,7 @@
                                             <div class="flex-items-center">
                                               <div>
                                                 <div id="whatsapp-row-title" class="_gw4xx4"><span
-                                                    class="_pgfqnw">WhatsApp</span></div>
+                                                    class="font-semibold">WhatsApp</span></div>
                                                 <div id="whatsapp-row-subtitle" class="_hi9sy">We'll send a code over
                                                   wifi.</div>
                                               </div>
@@ -2164,7 +2164,7 @@
                                             <div class="flex-items-center">
                                               <div>
                                                 <div id="phone_call-row-title" class="_gw4xx4"><span
-                                                    class="_pgfqnw">Phone call</span></div>
+                                                    class="font-semibold">Phone call</span></div>
                                                 <div id="phone_call-row-subtitle" class="_hi9sy">We'll call you with a
                                                   code.</div>
                                               </div>
@@ -5355,7 +5355,7 @@
                                             </div>
                                             <div class="flex-items-center">
                                               <div>
-                                                <div id="sms-row-title" class="_gw4xx4"><span class="_pgfqnw">Text
+                                                <div id="sms-row-title" class="_gw4xx4"><span class="font-semibold">Text
                                                     message (SMS)</span></div>
                                                 <div id="sms-row-subtitle" class="_hi9sy">We'll text you a code.</div>
                                               </div>
@@ -5390,7 +5390,7 @@
                                             <div class="flex-items-center">
                                               <div>
                                                 <div id="whatsapp-row-title" class="_gw4xx4"><span
-                                                    class="_pgfqnw">WhatsApp</span></div>
+                                                    class="font-semibold">WhatsApp</span></div>
                                                 <div id="whatsapp-row-subtitle" class="_hi9sy">We'll send a code over
                                                   wifi.</div>
                                               </div>
@@ -5425,7 +5425,7 @@
                                             <div class="flex-items-center">
                                               <div>
                                                 <div id="phone_call-row-title" class="_gw4xx4"><span
-                                                    class="_pgfqnw">Phone call</span></div>
+                                                    class="font-semibold">Phone call</span></div>
                                                 <div id="phone_call-row-subtitle" class="_hi9sy">We'll call you with a
                                                   code.</div>
                                               </div>
@@ -6802,7 +6802,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
@@ -6868,7 +6868,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
@@ -7049,7 +7049,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
