--- a/specific_trip.html
+++ b/specific_trip.html
@@ -5917,7 +5917,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
@@ -5983,7 +5983,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
@@ -6167,7 +6167,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
