--- a/dashboard.html
+++ b/dashboard.html
@@ -1027,7 +1027,7 @@
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="page-shell-mobile__lang-icon-wrapper"
-                                  ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                  ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
                             >
@@ -1088,7 +1088,7 @@
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="page-shell-mobile__lang-icon-wrapper"
-                                  ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                  ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
                             >
@@ -1258,7 +1258,7 @@
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="page-shell-mobile__lang-icon-wrapper"
-                                  ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                  ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
                             >
