--- a/help.html
+++ b/help.html
@@ -5819,7 +5819,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="page-shell-mobile__lang-icon-wrapper"
-                                    ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                    ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
                               >
@@ -5882,7 +5882,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="page-shell-mobile__lang-icon-wrapper"
-                                    ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                    ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
                               >
@@ -6052,7 +6052,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="page-shell-mobile__lang-icon-wrapper"
-                                    ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                    ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
                               >
