--- a/insights.html
+++ b/insights.html
@@ -1866,7 +1866,7 @@
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="page-shell-mobile__lang-icon-wrapper"
-                                  ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                  ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
                             >
@@ -1927,7 +1927,7 @@
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="page-shell-mobile__lang-icon-wrapper"
-                                  ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                  ><span class="font-semibold">₱</span></span
                                 ><span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
                             >
@@ -2105,7 +2105,7 @@
                                 <span class="text-highlight dir dir-ltr"
                                   >Choose a currency</span
                                 ><span class="page-shell-mobile__lang-icon-wrapper"
-                                  ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                  ><span class="font-semibold">₱</span></span
                                 >
                                 <span class="page-shell-mobile__lang-text">PHP</span>
                               </button></span
