--- a/payments/guest-contributions.html
+++ b/payments/guest-contributions.html
@@ -1299,7 +1299,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
@@ -1365,7 +1365,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
@@ -1546,7 +1546,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
