--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -1738,7 +1738,7 @@
                                       ><span
                                         class="page-shell-mobile__lang-icon-wrapper"
                                         ><span
-                                          class="page-shell-mobile__lang-icon-currency"
+                                          class="font-semibold"
                                           >₱</span
                                         ></span
                                       ><span
@@ -1827,7 +1827,7 @@
                                       ><span
                                         class="page-shell-mobile__lang-icon-wrapper"
                                         ><span
-                                          class="page-shell-mobile__lang-icon-currency"
+                                          class="font-semibold"
                                           >₱</span
                                         ></span
                                       ><span
@@ -2034,7 +2034,7 @@
                                       ><span
                                         class="page-shell-mobile__lang-icon-wrapper"
                                         ><span
-                                          class="page-shell-mobile__lang-icon-currency"
+                                          class="font-semibold"
                                           >₱</span
                                         ></span
                                       ><span
@@ -2376,7 +2376,7 @@
                               <path
                                 d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm0 10.2a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm.8-6.6H7.2v5.2h1.6z"
                               ></path></svg></span
-                          ><span class="_pgfqnw">This is required.</span>
+                          ><span class="font-semibold">This is required.</span>
                         </div>
                       </div>
                     </div>
