--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -1357,7 +1357,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
@@ -1423,7 +1423,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
@@ -1604,7 +1604,7 @@
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
