--- a/profile.html
+++ b/profile.html
@@ -2767,7 +2767,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
@@ -2833,7 +2833,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
@@ -3014,7 +3014,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       <span class="text-highlight dir dir-ltr"
                                         >Choose a currency</span
                                       ><span class="page-shell-mobile__lang-icon-wrapper"
-                                        ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                        ><span class="font-semibold">₱</span></span
                                       ><span class="page-shell-mobile__lang-text">PHP</span>
                                     </button></span
                                   >
