--- a/resources.html
+++ b/resources.html
@@ -5401,7 +5401,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="page-shell-mobile__lang-icon-wrapper"
-                                    ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                    ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
                               >
@@ -5464,7 +5464,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="page-shell-mobile__lang-icon-wrapper"
-                                    ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                    ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
                               >
@@ -5634,7 +5634,7 @@
                                   <span class="text-highlight dir dir-ltr"
                                     >Choose a currency</span
                                   ><span class="page-shell-mobile__lang-icon-wrapper"
-                                    ><span class="page-shell-mobile__lang-icon-currency">₱</span></span
+                                    ><span class="font-semibold">₱</span></span
                                   ><span class="page-shell-mobile__lang-text">PHP</span>
                                 </button></span
                               >
